Fix out of bounds use of QVector API.

This is a regression introduced by commit
22b7d211865c1505862627a2e65bcd063e314e45.

Task-number: QTBUG-24965
Task-number: QTBUG-25140

Change-Id: I3f3bfe23af802444b078a29ee5565dd2bd24a34d
Reviewed-by: David Faure <faure@kde.org>